# codemate

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  team.yml
.team/prompts/: fix.md  implement.md  plan.md  review.md
.team/schemas/: review.schema.json
codemate/: __init__.py  agents.py  artifacts.py  cli.py  commands.py  config.py  git_tools.py  interactive.py  policy.py  reporter.py  session.py  setup.py  workflow.py  yaml_lite.py
docs/: README.md  architecture.md  commands.md  configuration.md  safety.md  team.md
tests/: test_agents.py  test_commands.py  test_config.py  test_git_tools.py  test_interactive.py  test_maintenance.py  test_policy.py  test_reporter.py  test_review.py  test_session.py  test_setup.py  test_workflow.py  test_yaml_lite.py
